Fixed cors issue